tests/it/snapshots/it__fix__with_failing_ssh_keyfile_integration.snap
---
source: tests/it/fix.rs
expression: logger.output()
---
"\nDiagnosing connections to configured repositories\n✅ git@github.com:fossas/broker.git\nDiagnosing connection to FOSSA\n✅ check fossa API connection with no auth required❌ check fossa API connection with auth required\nErrors found while checking connection to FOSSA\n❌ Error checking connection to FOSSA: GET to fossa endpoint 'https://app.fossa.com/api/cli/organization' with authentication required\n\nBroker received an \"Unauthorized\" status response from FOSSA. This can mean that the fossa_integration_key configured in your config.yml file is not correct. You can obtain a FOSSA API key by going to Settings => Integrations => API in the FOSSA application.\n\nThe URL Broker attempted to connect to was 'https://app.fossa.com/api/cli/organization'. Please make sure you can make a request to that URL. For example, try this curl command:\n\ncurl -H \"Authorization: Bearer <your fossa api key>\" https://app.fossa.com/api/cli/organization\n\nFull error message: HTTP status client error (401 Unauthorized) for url (https://app.fossa.com/api/cli/organization)\n"
