tests/it/snapshots/it__fix__with_http_no_auth_integration.snap
---
source: tests/it/fix.rs
expression: logger.output().as_str()
---
"\u{1b}[1;34m\nDiagnosing connections to configured repositories\n\u{1b}[0m✅ https://github.com/fossas/broker.git\u{1b}[1;34m\nDiagnosing connection to FOSSA\n\u{1b}[0m✅ check fossa API connection with no auth required❌ check fossa API connection with auth required\u{1b}[1;31m\nErrors found while checking connection to FOSSA\u{1b}[0m\n❌ \u{1b}[31mError checking connection to FOSSA:\u{1b}[0m \u{1b}[31mGET to fossa endpoint 'https://app.fossa.com/api/cli/organization' with authentication required\u{1b}[0m\n\nBroker received an \"Unauthorized\" status response from FOSSA. This can mean that the fossa_integration_key configured in your config.yml file is not correct. You can obtain a FOSSA API key by going to Settings => Integrations => API in the FOSSA application.\n\nThe URL Broker attempted to connect to was 'https://app.fossa.com/api/cli/organization'. Please make sure you can make a request to that URL. For example, try this curl command:\n\n\u{1b}[32mcurl -H \"Authorization: Bearer <your fossa api key>\" https://app.fossa.com/api/cli/organization\u{1b}[0m\n\nFull error message: HTTP status client error (401 Unauthorized) for url (https://app.fossa.com/api/cli/organization)\n"
